# Fradupix

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  aidetect.db  aidetect.db-shm  aidetect.db-wal  fradupix.db  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: admin.py  auth.py  dashboard.py  documents.py  invoices.py
backend/app/ml/: anomaly_detector.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: duplicate_service.py  fraud_service.py  ocr_service.py  rag_service.py  risk_scoring.py  webhook_service.py
backend/app/tasks/: celery_app.py  invoice_tasks.py
backend/app/utils/: audit_logger.py  encryption.py  storage.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Header.jsx  Sidebar.jsx
frontend/src/pages/: Alerts.jsx  Analytics.jsx  AuditLog.jsx  Dashboard.jsx  InvoiceDetail.jsx  Invoices.jsx  Login.jsx  Settings.jsx  Upload.jsx
frontend/src/services/: api.js
