[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "bcrypt>=4.1.0",
    "celery[redis]>=5.3.0",
    "cryptography>=42.0.0",
    "fastapi>=0.109.0",
    "httpx>=0.27.0",
    "imagehash>=4.3.0",
    "jellyfish>=1.0.0",
    "minio>=7.2.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "pandas>=2.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pytesseract>=0.3.10",
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "rapidfuzz>=3.6.0",
    "redis>=5.0.0",
    "scikit-learn>=1.4.0",
    "sqlalchemy>=2.0.20",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]
